--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.4.1",
     "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
@@ -56,7 +57,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "lint": "eslint ./src"
   },
   "jest": {
     "collectCoverageFrom": [
